Add Javadoc, exception handling, and unit tests for rights service
Added detailed Javadoc comments to service and controller methods to improve code clarity. Introduced `IllegalArgumentException` handling in the error handler for better validation of empty rights. Created comprehensive unit tests for `TeacherRightsService` to ensure reliable functionality and edge case handling.